--- a/shinobi/imgui.ini
+++ b/shinobi/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=33,59
+Pos=33,15
 Size=400,400
 
 [Window][##Toolbar]
@@ -7,12 +7,12 @@ Pos=0,0
 Size=1280,40
 
 [Window][Settings]
-Pos=0,40
-Size=1280,680
+Pos=100,99
+Size=313,123
 
 [Window][Popup]
 Pos=60,60
-Size=16,35
+Size=10,31
 
 [Window][MainApp]
 Pos=0,0
@@ -20,5 +20,17 @@ Size=1280,720
 
 [Window][MainContent]
 Pos=0,40
-Size=1280,680
+Size=1418,760
+
+[Window][MainAppWindow]
+Pos=0,0
+Size=677,283
+
+[Window][Camera View]
+Pos=60,15
+Size=163,41
+
+[Window][rootWindow]
+Pos=0,0
+Size=686,428
 
