Added audio.h for audio pulse control

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,25 @@ shinobi/build/CMakeFiles/my_app.dir/gui/SettingWindow.cpp.o
 shinobi/build/CMakeFiles/my_app.dir/gui/SettingWindow.cpp.o.d
 shinobi/build/CMakeFiles/my_app.dir/utils/Notification.cpp.o
 shinobi/build/CMakeFiles/my_app.dir/utils/Notification.cpp.o.d
+shinobi/build/CMakeFiles/my_app.dir/utils/Audio.cpp.o
+shinobi/build/CMakeFiles/my_app.dir/utils/Audio.cpp.o.d
+shinobi/build/CMakeFiles/Progress/1
+shinobi/build/CMakeFiles/Progress/2
+shinobi/build/CMakeFiles/Progress/3
+shinobi/build/CMakeFiles/Progress/4
+shinobi/build/CMakeFiles/Progress/5
+shinobi/build/CMakeFiles/Progress/6
+shinobi/build/CMakeFiles/Progress/7
+shinobi/build/CMakeFiles/Progress/8
+shinobi/build/CMakeFiles/Progress/9
+shinobi/build/CMakeFiles/Progress/10
+shinobi/build/CMakeFiles/Progress/11
+shinobi/build/CMakeFiles/Progress/12
+shinobi/build/CMakeFiles/Progress/13
+shinobi/build/CMakeFiles/Progress/14
+shinobi/build/CMakeFiles/Progress/15
+shinobi/build/CMakeFiles/Progress/16
+shinobi/build/CMakeFiles/Progress/17
+shinobi/build/CMakeFiles/Progress/18
+shinobi/build/CMakeFiles/Progress/19
+shinobi/build/CMakeFiles/Progress/20
