Added ModeSelector window to choose the alarm to set

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,10 @@ shinobi/build/CMakeFiles/Progress/17
 shinobi/build/CMakeFiles/Progress/18
 shinobi/build/CMakeFiles/Progress/19
 shinobi/build/CMakeFiles/Progress/20
+shinobi/build/.cmake/api/v1/reply/cache-v2-e99554f23e0d43d3c865.json
+shinobi/build/.cmake/api/v1/reply/cmakeFiles-v1-9a903bb020c8fdebe127.json
+shinobi/build/.cmake/api/v1/reply/codemodel-v2-666a1978855e49963c5f.json
+shinobi/build/.cmake/api/v1/reply/index-2025-04-01T23-53-25-0458.json
+shinobi/build/.cmake/api/v1/reply/target-my_app-Debug-5ca72590e3570386bf2e.json
+shinobi/build/CMakeFiles/my_app.dir/gui/ModeSelector.cpp.o
+shinobi/build/CMakeFiles/my_app.dir/gui/ModeSelector.cpp.o.d
