--- a/shinobi/.vscode/settings.json
+++ b/shinobi/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.defaultFormatter": "xaver.clang-format",
     "files.associations": {
         "array": "cpp",
         "atomic": "cpp",
