+ Sentinel.h added todo .cpp + Dog now use a Vlcplayer + Vlcplayer utils class added to play audio

--- a/shinobi/CMakeLists.txt
+++ b/shinobi/CMakeLists.txt
@@ -46,9 +46,11 @@ add_executable(my_app
     utils/Audio.cpp
     utils/SensorData.cpp
     utils/Logger.cpp
+    utils/Vlcplayer.cpp
     src/SensorMng.cpp
     src/dog.cpp
     src/ThreadMng.cpp
+    src/Sentinel.cpp
 
 )
 
