+ Bot telegram: auth ok, no message receive + Fixed bug on Modes Stop(): Vlc termination must be after the thread termination to prevent the thread to call play after vlc dead

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "shinobi/extern/imgui"]
 	path = shinobi/extern/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "shinobi/extern/tdlib"]
+	path = shinobi/extern/tdlib
+	url = https://github.com/tdlib/td.git
