--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ shinobi/build/.cmake/api/v1/reply/index-2025-04-02T16-35-50-0978.json
 shinobi/build/.cmake/api/v1/reply/toolchains-v1-78e1ec32f5d5e8dda251.json
 shinobi/build/CMakeFiles/rules.ninja
 shinobi/imgui.ini
+shinobi/token.txt
+shinobi/tdlib_files/td_cinfig.json
