--- a/shinobi/CMakeLists.txt
+++ b/shinobi/CMakeLists.txt
@@ -13,11 +13,14 @@ set(OpenGL_GL_PREFERENCE GLVND)
 add_subdirectory(extern/imgui)
 
 # TD lib: Telegram
-find_library(TDLIB_LIBRARY tdjson PATHS "/usr/local/lib")
-find_path(TDLIB_INCLUDE_DIR td/telegram/td_json_client.h PATHS "/usr/local/include")
-if(NOT TDLIB_LIBRARY OR NOT TDLIB_INCLUDE_DIR)
-    message(FATAL_ERROR "TDLib non trovato!")
-endif()
+# find_library(TDLIB_JSON_LIB tdjson PATHS /usr/local/lib REQUIRED)
+# find_library(TDLIB_CLIENT_LIB tdclient PATHS /usr/local/lib REQUIRED)
+# find_library(TDLIB_LIBRARY tdjson PATHS "/usr/local/lib")
+# find_path(TDLIB_INCLUDE_DIR td/telegram/Client.h PATHS /usr/local/include REQUIRED)
+# find_path(TDLIB_INCLUDE_DIR td/telegram/td_json_client.h PATHS "/usr/local/include")
+# if(NOT TDLIB_LIBRARY OR NOT TDLIB_INCLUDE_DIR)
+#     message(FATAL_ERROR "TDLib non trovato!")
+# endif()
 
 # 2. Find other dependencies
 find_package(glfw3 REQUIRED)
@@ -25,6 +28,7 @@ find_package(OpenGL REQUIRED)
 find_package(nlohmann_json 3.0 REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(PkgConfig REQUIRED)
+find_package(Td 1.8.47 REQUIRED)
 
 pkg_check_modules(PULSEAUDIO REQUIRED libpulse libpulse-simple)
 pkg_check_modules(GLIB REQUIRED glib-2.0)
@@ -74,9 +78,12 @@ target_link_libraries(my_app PRIVATE
     ${PULSEAUDIO_LIBRARIES}
     ${GLIB_LIBRARIES}
     ${VLC_LIBRARIES} 
-    tdjson 
-    tdjson_static
-    ${TDLIB_LIBRARY}
+    Td::tdjson 
+    Td::TdStatic
+    # tdjson_static
+    # ${TDLIB_LIBRARY}
+    # ${TDLIB_JSON_LIB} 
+    # ${TDLIB_CLIENT_LIB}
 )
 
 
@@ -88,7 +95,7 @@ target_include_directories(my_app PRIVATE
     ${PULSEAUDIO_INCLUDE_DIRS}                          # Pulse Audio
     ${GLIB_INCLUDE_DIRS}                                # GLib
     ${VLC_INCLUDE_DIRS} 
-    ${TDLIB_INCLUDE_DIR}
+  #  ${TDLIB_INCLUDE_DIR}
 )
 
 target_compile_options(my_app PRIVATE
