+ Bot now send and receive with append handler + Sentinel wait 60 second for a response: todo commands and auto mode + MyWindow: Manage toolbar icons state by monitoring ThreadMn selection and SensorMng status

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ shinobi/tdlib/db.sqlite
 shinobi/tdlib/db.sqlite-shm
 shinobi/tdlib/db.sqlite-wal
 shinobi/tdlib/td.binlog
+shinobi/jsooooooooooooooooooon.txt
